--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -118,6 +118,15 @@ header {
     color: #757575;
 }
 
+#event-create-container {
+    padding: 30px;
+}
+
+#event-create-container input,
+#event-create-container select,
+#event-create-container textarea {
+    font-size: 12px;
+}
 footer {
     text-align: center;
     background-color: #353E48;
