--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -122,6 +122,10 @@ header {
     padding: 30px;
 }
 
+#event-create-container label {
+    font-weight: bold;
+}
+
 #event-create-container input,
 #event-create-container select,
 #event-create-container textarea {
