Event Search, date, css

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -13,7 +13,7 @@ header {
     border-bottom: 1px solid #CCC;
 }
 
-.row{
+.row {
     margin: 0;
 }
 
@@ -141,6 +141,55 @@ header {
 #event-create-container textarea {
     font-size: 12px;
 }
+
+/* event page */
+#image-container,
+#info-container {
+    margin-top: 10px;
+}
+
+#image-container img {
+    border-radius: 10px;
+}
+
+#info-container h1 {
+    font-size: 36px;
+    font-weight: 900;
+}
+
+#info-container p {
+    margin: 0;
+    font-size: 14px;
+    display: flex;
+}
+
+#info-container h3,
+#description-container h3 {
+    font-size: 20PX;
+    font-weight: bold;
+}
+
+#info-container ion-icon {
+    font-size: 20px;
+    color: #F2A340;
+    margin-right: 5px;
+}
+
+#info-container #event-submit {
+    margin: 20px 0;
+}
+
+#items-list {
+    list-style: none;
+    padding-left: 0;
+}
+
+#items-list li {
+    display: flex;
+}
+
+
+
 footer {
     text-align: center;
     background-color: #353E48;
